release/develop/20160226-2040/backup/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Billing Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Inquiry</fullName>
        <description>Basic Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Technical Issue</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - First Call</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Creator_Functional_Group__c</fullName>
        <description>Name of the Functional Group for the Case creator.</description>
        <label>Functional Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c ), NOW() - DateTime_Opened_c__c , DateTime_Closed_c__c - DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <formula>IMAGE(CASE(Status, 
&quot;New&quot;, &quot;/resource/Case_Indicator/Status-New.png&quot;, 
&quot;Escalated&quot;, &quot;/resource/Case_Indicator/Status-Escalated.png&quot;, 
&quot;On Hold&quot;, &quot;/resource/Case_Indicator/Status-Researching.png&quot;, 
&quot;Closed&quot;, &quot;/resource/Case_Indicator/Status-Closed.png&quot;, 
&quot;/resource/Case_Indicator/Status-Responded.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Collected__c</fullName>
        <description>Information collected from Flow</description>
        <label>Information Collected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Payment__c</fullName>
        <label>Last Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Open_Opps_at_Creation__c</fullName>
        <label>Open Account Opportunities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Deal_Total_Amount__c</fullName>
        <label>Open Deal Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Billing__c</fullName>
        <label>Payment Billing</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Type_Subtypes__c</fullName>
        <label>Problem Type Subtypes</label>
        <picklist>
            <controllingField>Problem_Type__c</controllingField>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_Type__c</fullName>
        <label>Problem Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE(CASE(Origin,
&quot;Chatter Answers&quot;, &quot;/resource/Case_Source/chatter_answers_logo.png&quot;, 
&quot;Email&quot;, &quot;/resource/Case_Source/email_icon.png&quot;, 
&quot;Phone&quot;, &quot;/resource/Case_Source/phone_icon.png&quot;, 
&quot;Facebook&quot;, &quot;/resource/Case_Source/facebook_icon.png&quot;, 
&quot;Twitter&quot;, &quot;/resource/Case_Source/twitter_icon.png&quot;, 
&quot;Website&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;Google&quot;, &quot;/resource/Case_Source/google.gif&quot;, 
&quot;Chat&quot;, &quot;/resource/Case_Source/chat_icon.png&quot;, 
&quot;Portal&quot;, &quot;/resource/Case_Source/website_icon.png&quot;, 
&quot;/resource/Case_Source/website_icon.png&quot;),&quot;&quot;,18,18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <description>used for datapacks</description>
        <label>external id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <columns>CASES.ESCALATION_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Indicator__c</columns>
        <columns>Source__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Service_Hardware_Desktop_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Hardware Desktop</label>
        <queue>Service_Hardware_Desktop</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Hardware_Keyboard_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Hardware - Keyboard</label>
        <queue>Service_Hardware_Keyboard</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Hardware_Monitor_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Hardware - Monitor</label>
        <queue>Service_Hardware_Monitor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Mouse_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Hardware - Mouse</label>
        <queue>Service_Mouse</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Software_Application_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Software - Application</label>
        <queue>Service_Software_Application</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Service_Software_Operating_System_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Software - Operating System</label>
        <queue>Service_Software_Operating_System</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_1_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 1 Queue</label>
        <queue>Tier_1_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_2_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 2 Queue</label>
        <queue>Tier_2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tier_3_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Source__c</columns>
        <filterScope>Queue</filterScope>
        <label>Tier 3 Queue</label>
        <queue>Tier_3_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Billing_Inquiry</fullName>
        <active>true</active>
        <businessProcess>Billing Process</businessProcess>
        <description>Customer billing questions.</description>
        <label>Billing Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Inquiry</fullName>
        <active>true</active>
        <businessProcess>General Inquiry</businessProcess>
        <description>General customer questions and inquiry</description>
        <label>General Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Issue</fullName>
        <active>true</active>
        <businessProcess>Technical Issue</businessProcess>
        <description>Technical investigations and troubleshooting</description>
        <label>Technical Issue</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>